frontend/src/App.css
:root {
  font-family: 'Roboto', 'sans-serif';

  --primary-color: #ffffff;
  --secondary-color: #000000;
  --accent-color: #8c8c8c;

  --primary-background-color: var(--primary-color);
  --primary-text-color: var(--secondary-color);
  --secondary-background-color: var(--secondary-color);
  --secondary-text-color: var(--primary-color);
  --accent-background-color: var(--accent-color);
  --accent-text-color: var(--accent-color);
}

.App {
  width: 100vw;
  min-height: 100vh;
}

.buttons-grid {
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(auto-fill, 200px);

  margin: 20px;
}

.header {
  height: 300px;
}

.primary-background {
  position: relative;
  overflow: hidden;
}

.primary-background::before {
  content: '';
  position: absolute;
  z-index: -1;
  background-image: url('./assets/halftone-effect.svg');
  transform: rotate(11deg) translate(-450px, calc(-1250px + (2vh * 30)));
  background-repeat: repeat-x;
  height: 5000px;
  width: 5000px;
}

@media (min-width: 2470px) {
  .primary-background::before {
    transform: rotate(11deg) translate(-450px, calc(-1600px + (2vh * 30)));
  }
}

